# Robotics-humanoid-AI-book

./: .npmignore  Header.css  Header.jsx  README.md  constitution_draft.md  course_details.md  create-adr.bat  docusaurus.config.js  package-lock.json  package.json  theme.css  tmp_spec_script.sh
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assessments/capstone-guidelines/: project-guidelines.md
assessments/project-rubrics/: assessment-rubrics.md
code-examples/: requirements.txt
code-examples/ros2-nodes/example_robot_control/: CMakeLists.txt  package.xml
code-examples/ros2-nodes/example_robot_control/src/: example_robot_node.cpp
code-examples/ros2-nodes/physical_ai_interfaces/: CMakeLists.txt  package.xml
code-examples/ros2-nodes/physical_ai_interfaces/msg/: ActionStep.msg  Entity.msg  ManipulationInfo.msg  ObjectInfo.msg  PlanStep.msg  PlannerInfo.msg
code-examples/ros2-nodes/physical_ai_interfaces/srv/: ManipulationPlanner.srv  NavigationPlanner.srv  VoiceCommandToAction.srv
code-examples/ros2-nodes/robot_state_machine/: CMakeLists.txt  package.xml
docs/: 404.html  index.html  introduction.md  search-functionality.md  sitemap.xml
docs/assets/css/: styles.50603041.css  styles.f01c795f.css
docs/assets/js/: 016ddd41.36d650a4.js  032f3d9c.7800b56e.js  0365699b.2197b97d.js  070abc83.92a74d6b.js  078dd472.f5bfe4f2.js  0b78a567.af320676.js  0deebcba.50d04c9d.js  10d86a84.17111d00.js  1525568c.6e5fc3d4.js  17896441.d9b36dc2.js  18359218.02c8dd4f.js  (+73 more)
docs/docs/: introduction.html  search-functionality.html  tags.html
docs/part-2-nervous-system/: chapter-3-ros2-architecture-core-concepts.md  chapter-4-simulation-gazebo-unity-integration.md
docs/part-4-ai-brain/: chapter-10-vision-language-action.md  chapter-8-nvidia-isaac-sim-sdk.md
docs/part-5-advanced-humanoids/: chapter-11-humanoid-kinematics-locomotion.md  chapter-12-vla-conversational-robotics.md
documentation/: development-environment-setup.md  gazebo-installation-guide.md  isaac-sim-installation-guide.md  python-dependencies-guide.md  ros2-installation-guide.md  testing-framework.md  unity-installation-guide.md
documentation/troubleshooting/: troubleshooting-guide.md
docusaurus/: .gitignore  package-lock.json  package.json  sidebars.js  tailwind.config.js  update-headings-with-emojis.js
docusaurus/blog/: 2025-01-01-welcome.md  2025-01-02-embodied-intelligence.md  2025-01-03-ros2-nervous-system.md
docusaurus/docs/: introduction.md
hardware-setup/edge-kit/: edge-kit-setup-guide.md
hardware-setup/robot-specific/: robot-platform-setup-guide.md
hardware-setup/workstation/: workstation-setup-guide.md
history/adr/: ADR-0001.md  ADR-0002.md
physical-ai-book/: customDocLayout.js  docusaurus.config.js  index.tsx  package-lock.json  package.json  sidebars.js
physical-ai-book/docs/: introduction.md
specs/001-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-physical-ai-book-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/components/: FeatureCard.tsx  ModuleCard.tsx  Navbar.tsx  PhysicalAILogoHeader.module.css
src/css/: custom.css  footer.css
src/pages/: _customDocLayout.js  customDocLayout.js  index.module.css
src/theme/: Heading.js  Layout.js
(+114 files in other folders)
